--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>helloo!</title>
   </head>
   <body>
     <h1>This project already has something.</h1>
