--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>helloo!</title>
   </head>
   <body>
-    <h1>This project already has something.</h1>
+    <h1>This project already had something.</h1>
   </body>
 </html>
